add resnet augmented

--- a/BEST_ClassicCNN_keras_aug.ipynb
+++ b/BEST_ClassicCNN_keras_aug.ipynb
@@ -16,7 +16,14 @@
     "import random\n",
     "np.random.seed(42)\n",
     "tf.random.set_seed(42)\n",
-    "random.seed(42)\n"
+    "random.seed(42)\n",
+    "\n",
+    "import os\n",
+    "os.environ['PYTHONHASHSEED'] = '42'\n",
+    "\n",
+    "\n",
+    "keras.utils.set_random_seed(42)\n",
+    "# tf.config.experimental.enable_op_determinism()"
    ]
   },
   {
