--- a/efficientLarge_keras_no_aug.ipynb
+++ b/efficientLarge_keras_no_aug.ipynb
@@ -10,7 +10,22 @@
     "from tensorflow import keras\n",
     "from tensorflow.keras import layers\n",
     "\n",
-    "from src.augmentations import CustomAugmentations\n"
+    "from src.augmentations import CustomAugmentations\n",
+    "\n",
+    "\n",
+    "import numpy as np\n",
+    "import random\n",
+    "np.random.seed(42)\n",
+    "tf.random.set_seed(42)\n",
+    "random.seed(42)\n",
+    "\n",
+    "import os\n",
+    "os.environ['PYTHONHASHSEED'] = '42'\n",
+    "\n",
+    "\n",
+    "keras.utils.set_random_seed(42)\n",
+    "# tf.config.experimental.enable_op_determinism()\n",
+    "\n"
    ]
   },
   {
