--- a/resnet_keras_no_aug.ipynb
+++ b/resnet_keras_no_aug.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "\n",
     "keras.utils.set_random_seed(42)\n",
-    "tf.config.experimental.enable_op_determinism()\n",
+    "# tf.config.experimental.enable_op_determinism()\n",
     "\n"
    ]
   },
