--- a/resnet_keras_aug.ipynb
+++ b/resnet_keras_aug.ipynb
@@ -22,7 +22,7 @@
     "os.environ['PYTHONHASHSEED'] = '42'\n",
     "\n",
     "keras.utils.set_random_seed(42)\n",
-    "tf.config.experimental.enable_op_determinism()\n"
+    "# tf.config.experimental.enable_op_determinism()\n"
    ]
   },
   {
