--- a/efficientLarge_keras_aug_10epochs.ipynb
+++ b/efficientLarge_keras_aug_10epochs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
        "[{'flip': 0.5}, {'gauss_noise': 0.5}, {'flip': 0.5, 'gauss_noise': 0.5}]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,13 +74,13 @@
     "    p_d = {aug_type: .5}\n",
     "    p_dicts.append(p_d)\n",
     "\n",
-    "p_dict = {\n",
-    "  \"flip\": 0.5,\n",
-    "  # \"transpose\": 0.5,\n",
-    "  \"gauss_noise\": 0.5,\n",
-    "  # \"brightness_contrast\": 0.5,\n",
-    "  # \"hue_saturation_value\": 0.5,\n",
-    "}\n",
+    "# p_dict = {\n",
+    "#   \"flip\": 0.5,\n",
+    "#   # \"transpose\": 0.5,\n",
+    "#   \"gauss_noise\": 0.5,\n",
+    "#   # \"brightness_contrast\": 0.5,\n",
+    "#   # \"hue_saturation_value\": 0.5,\n",
+    "# }\n",
     "p_dicts.append(p_dict)\n",
     "\n",
     "p_dicts\n"
@@ -88,13 +88,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2b7fc5d03d694857b2fc5ada8bc72db9",
+       "model_id": "bbaa13f101f7400ea95f1392eb973c6e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -115,7 +115,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "12f1c9c3bb5c4774b67b4b4e720774ee",
+       "model_id": "b36694d78377450faeb8d29dfb8e5db2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -141,7 +141,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "622a1ac927fd417abad5ce13c85f879e",
+       "model_id": "272d9f6d2507433db8f2a767b560c29c",
        "version_major": 2,
        "version_minor": 0
       },
