--- a/efficientLarge_keras_aug_10epochs.ipynb
+++ b/efficientLarge_keras_aug_10epochs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,16 +44,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'flip': 0.5}, {'gauss_noise': 0.5}, {'flip': 0.5, 'gauss_noise': 0.5}]"
+       "[{'gauss_noise': 0.5}]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,7 +62,7 @@
     "\n",
     "# Define the augmentation probabilities\n",
     "p_dict = {\n",
-    "  \"flip\": 0.5,\n",
+    "  # \"flip\": 0.5,\n",
     "  # \"transpose\": 0.5,\n",
     "  \"gauss_noise\": 0.5,\n",
     "  # \"brightness_contrast\": 0.5,\n",
@@ -81,25 +81,25 @@
     "#   # \"brightness_contrast\": 0.5,\n",
     "#   # \"hue_saturation_value\": 0.5,\n",
     "# }\n",
-    "p_dicts.append(p_dict)\n",
+    "# p_dicts.append(p_dict)\n",
     "\n",
     "p_dicts\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bbaa13f101f7400ea95f1392eb973c6e",
+       "model_id": "67d12e9e715845fab6e25e74d69e2744",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Augmentation:   0%|          | 0/3 [00:00<?, ?it/s]"
+       "Augmentation:   0%|          | 0/1 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -109,13 +109,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Augmentations: flip0.5\n"
+      "Augmentations: gauss_noise0.5\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b36694d78377450faeb8d29dfb8e5db2",
+       "model_id": "05041154d6b54872b2e9f3d63e95f0fd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -141,7 +141,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "272d9f6d2507433db8f2a767b560c29c",
+       "model_id": "1430e73b4e554e3e9b6bdbb4ff9621ad",
        "version_major": 2,
        "version_minor": 0
       },
@@ -156,7 +156,260 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/13\n"
+      "Epoch 1/13\n",
+      "1336/1336 [==============================] - 236s 152ms/step - loss: 1.2586 - accuracy: 0.5613 - val_loss: 0.9984 - val_accuracy: 0.6489\n",
+      "Epoch 2/13\n",
+      "1336/1336 [==============================] - 199s 149ms/step - loss: 0.9186 - accuracy: 0.6885 - val_loss: 0.9233 - val_accuracy: 0.6856\n",
+      "Epoch 3/13\n",
+      "1336/1336 [==============================] - 196s 147ms/step - loss: 0.8314 - accuracy: 0.7157 - val_loss: 1.7069 - val_accuracy: 0.4813\n",
+      "Epoch 4/13\n",
+      "1336/1336 [==============================] - 196s 147ms/step - loss: 1.0224 - accuracy: 0.6467 - val_loss: 0.9252 - val_accuracy: 0.6853\n",
+      "Epoch 5/13\n",
+      "1336/1336 [==============================] - 196s 147ms/step - loss: 0.8104 - accuracy: 0.7206 - val_loss: 0.8849 - val_accuracy: 0.7027\n",
+      "Epoch 6/13\n",
+      "1336/1336 [==============================] - 196s 147ms/step - loss: 0.6465 - accuracy: 0.7778 - val_loss: 0.8777 - val_accuracy: 0.7096\n",
+      "Epoch 7/13\n",
+      "1336/1336 [==============================] - 194s 145ms/step - loss: 0.5563 - accuracy: 0.8125 - val_loss: 0.9730 - val_accuracy: 0.6733\n",
+      "Epoch 8/13\n",
+      "1336/1336 [==============================] - 190s 142ms/step - loss: 0.4920 - accuracy: 0.8343 - val_loss: 0.8596 - val_accuracy: 0.7169\n",
+      "Epoch 9/13\n",
+      "1336/1336 [==============================] - 190s 142ms/step - loss: 0.3559 - accuracy: 0.8818 - val_loss: 0.9564 - val_accuracy: 0.7118\n",
+      "Epoch 10/13\n",
+      "1336/1336 [==============================] - 190s 142ms/step - loss: 0.2938 - accuracy: 0.9032 - val_loss: 0.9668 - val_accuracy: 0.7173\n",
+      "Epoch 11/13\n",
+      "1336/1336 [==============================] - 191s 143ms/step - loss: 0.2670 - accuracy: 0.9134 - val_loss: 0.9662 - val_accuracy: 0.7251\n",
+      "Epoch 12/13\n",
+      "1336/1336 [==============================] - 190s 142ms/step - loss: 0.2079 - accuracy: 0.9330 - val_loss: 1.0925 - val_accuracy: 0.7218\n",
+      "Epoch 13/13\n",
+      "1336/1336 [==============================] - 191s 143ms/step - loss: 0.1815 - accuracy: 0.9416 - val_loss: 1.0455 - val_accuracy: 0.7273\n",
+      "Predicting model 0\n",
+      "1407/1407 - 55s - 55s/epoch - 39ms/step\n",
+      "Accuracy: 0.7229444444444444 for model 0\n",
+      "Saving model 0\n",
+      "Found 90000 files belonging to 10 classes.\n",
+      "Using 85500 files for training.\n",
+      "Found 90000 files belonging to 10 classes.\n",
+      "Using 4500 files for validation.\n",
+      "Found 90000 files belonging to 10 classes.\n",
+      "Fitting model 1\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "abbd820259cc45ef8a4001afbead411f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Epoch:   0%|          | 0/13 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/13\n",
+      "1336/1336 [==============================] - 226s 146ms/step - loss: 1.2355 - accuracy: 0.5672 - val_loss: 0.9968 - val_accuracy: 0.6458\n",
+      "Epoch 2/13\n",
+      "1336/1336 [==============================] - 191s 143ms/step - loss: 0.9648 - accuracy: 0.6688 - val_loss: 0.9684 - val_accuracy: 0.6573\n",
+      "Epoch 3/13\n",
+      "1336/1336 [==============================] - 191s 143ms/step - loss: 0.9481 - accuracy: 0.6727 - val_loss: 1.0181 - val_accuracy: 0.6429\n",
+      "Epoch 4/13\n",
+      "1336/1336 [==============================] - 191s 143ms/step - loss: 0.8401 - accuracy: 0.7119 - val_loss: 0.8374 - val_accuracy: 0.7091\n",
+      "Epoch 5/13\n",
+      "1336/1336 [==============================] - 192s 144ms/step - loss: 0.7881 - accuracy: 0.7305 - val_loss: 0.8687 - val_accuracy: 0.7031\n",
+      "Epoch 6/13\n",
+      "1336/1336 [==============================] - 192s 144ms/step - loss: 0.7954 - accuracy: 0.7251 - val_loss: 0.7866 - val_accuracy: 0.7331\n",
+      "Epoch 7/13\n",
+      "1336/1336 [==============================] - 191s 143ms/step - loss: 0.7799 - accuracy: 0.7307 - val_loss: 0.8059 - val_accuracy: 0.7233\n",
+      "Epoch 8/13\n",
+      "1336/1336 [==============================] - 192s 144ms/step - loss: 0.5723 - accuracy: 0.8042 - val_loss: 0.8250 - val_accuracy: 0.7271\n",
+      "Epoch 9/13\n",
+      "1336/1336 [==============================] - 192s 144ms/step - loss: 0.4455 - accuracy: 0.8484 - val_loss: 0.9183 - val_accuracy: 0.7264\n",
+      "Epoch 10/13\n",
+      "1336/1336 [==============================] - 192s 143ms/step - loss: 0.4197 - accuracy: 0.8603 - val_loss: 1.1522 - val_accuracy: 0.6520\n",
+      "Epoch 11/13\n",
+      "1336/1336 [==============================] - 191s 143ms/step - loss: 0.4824 - accuracy: 0.8362 - val_loss: 0.8587 - val_accuracy: 0.7387\n",
+      "Epoch 12/13\n",
+      "1336/1336 [==============================] - 191s 143ms/step - loss: 0.2894 - accuracy: 0.9055 - val_loss: 0.9484 - val_accuracy: 0.7347\n",
+      "Epoch 13/13\n",
+      "1336/1336 [==============================] - 191s 143ms/step - loss: 0.2351 - accuracy: 0.9226 - val_loss: 0.9758 - val_accuracy: 0.7287\n",
+      "Predicting model 1\n",
+      "1407/1407 - 55s - 55s/epoch - 39ms/step\n",
+      "Accuracy: 0.7230222222222222 for model 1\n",
+      "Saving model 1\n",
+      "Found 90000 files belonging to 10 classes.\n",
+      "Using 85500 files for training.\n",
+      "Found 90000 files belonging to 10 classes.\n",
+      "Using 4500 files for validation.\n",
+      "Found 90000 files belonging to 10 classes.\n",
+      "Fitting model 2\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "592845da14224c48a4dee86e799507b3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Epoch:   0%|          | 0/13 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/13\n",
+      "1336/1336 [==============================] - 228s 148ms/step - loss: 1.2345 - accuracy: 0.5646 - val_loss: 0.8943 - val_accuracy: 0.6782\n",
+      "Epoch 2/13\n",
+      "1336/1336 [==============================] - 194s 145ms/step - loss: 0.8739 - accuracy: 0.7002 - val_loss: 0.8615 - val_accuracy: 0.6956\n",
+      "Epoch 3/13\n",
+      "1336/1336 [==============================] - 193s 145ms/step - loss: 0.7224 - accuracy: 0.7541 - val_loss: 0.8262 - val_accuracy: 0.7278\n",
+      "Epoch 4/13\n",
+      "1336/1336 [==============================] - 193s 145ms/step - loss: 0.7157 - accuracy: 0.7559 - val_loss: 0.8010 - val_accuracy: 0.7280\n",
+      "Epoch 5/13\n",
+      "1336/1336 [==============================] - 192s 144ms/step - loss: 0.5850 - accuracy: 0.8037 - val_loss: 0.8319 - val_accuracy: 0.7307\n",
+      "Epoch 6/13\n",
+      "1336/1336 [==============================] - 193s 144ms/step - loss: 0.6377 - accuracy: 0.7812 - val_loss: 0.8351 - val_accuracy: 0.7136\n",
+      "Epoch 7/13\n",
+      "1336/1336 [==============================] - 193s 144ms/step - loss: 0.6229 - accuracy: 0.7862 - val_loss: 0.8017 - val_accuracy: 0.7469\n",
+      "Epoch 8/13\n",
+      "1336/1336 [==============================] - 193s 144ms/step - loss: 0.3835 - accuracy: 0.8713 - val_loss: 0.9222 - val_accuracy: 0.7360\n",
+      "Epoch 9/13\n",
+      "1336/1336 [==============================] - 194s 145ms/step - loss: 0.3079 - accuracy: 0.8968 - val_loss: 0.8870 - val_accuracy: 0.7402\n",
+      "Epoch 10/13\n",
+      "1336/1336 [==============================] - 193s 145ms/step - loss: 0.2754 - accuracy: 0.9107 - val_loss: 1.6992 - val_accuracy: 0.7253\n",
+      "Epoch 11/13\n",
+      "1336/1336 [==============================] - 193s 144ms/step - loss: 0.2475 - accuracy: 0.9185 - val_loss: 1.0432 - val_accuracy: 0.7262\n",
+      "Epoch 12/13\n",
+      "1336/1336 [==============================] - 193s 145ms/step - loss: 0.2290 - accuracy: 0.9258 - val_loss: 1.0760 - val_accuracy: 0.7376\n",
+      "Epoch 13/13\n",
+      "1336/1336 [==============================] - 193s 144ms/step - loss: 0.2497 - accuracy: 0.9167 - val_loss: 0.9639 - val_accuracy: 0.7342\n",
+      "Predicting model 2\n",
+      "1407/1407 - 55s - 55s/epoch - 39ms/step\n",
+      "Accuracy: 0.7269444444444444 for model 2\n",
+      "Saving model 2\n",
+      "Found 90000 files belonging to 10 classes.\n",
+      "Using 85500 files for training.\n",
+      "Found 90000 files belonging to 10 classes.\n",
+      "Using 4500 files for validation.\n",
+      "Found 90000 files belonging to 10 classes.\n",
+      "Fitting model 3\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a11b48946c6244c0a75b093b633f2004",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Epoch:   0%|          | 0/13 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/13\n",
+      "1336/1336 [==============================] - 229s 149ms/step - loss: 1.2760 - accuracy: 0.5457 - val_loss: 0.9979 - val_accuracy: 0.6564\n",
+      "Epoch 2/13\n",
+      "1336/1336 [==============================] - 195s 146ms/step - loss: 0.9189 - accuracy: 0.6854 - val_loss: 0.9637 - val_accuracy: 0.6640\n",
+      "Epoch 3/13\n",
+      "1336/1336 [==============================] - 195s 146ms/step - loss: 0.7490 - accuracy: 0.7441 - val_loss: 0.8435 - val_accuracy: 0.7067\n",
+      "Epoch 4/13\n",
+      "1336/1336 [==============================] - 196s 147ms/step - loss: 1.0410 - accuracy: 0.6380 - val_loss: 1.1556 - val_accuracy: 0.5929\n",
+      "Epoch 5/13\n",
+      "1336/1336 [==============================] - 196s 147ms/step - loss: 0.9357 - accuracy: 0.6719 - val_loss: 0.8294 - val_accuracy: 0.7089\n",
+      "Epoch 6/13\n",
+      "1336/1336 [==============================] - 196s 147ms/step - loss: 0.6424 - accuracy: 0.7775 - val_loss: 0.8093 - val_accuracy: 0.7284\n",
+      "Epoch 7/13\n",
+      "1336/1336 [==============================] - 196s 147ms/step - loss: 0.5300 - accuracy: 0.8192 - val_loss: 0.8658 - val_accuracy: 0.7158\n",
+      "Epoch 8/13\n",
+      "1336/1336 [==============================] - 196s 147ms/step - loss: 0.4610 - accuracy: 0.8434 - val_loss: 0.8889 - val_accuracy: 0.7193\n",
+      "Epoch 9/13\n",
+      "1336/1336 [==============================] - 195s 146ms/step - loss: 0.4470 - accuracy: 0.8491 - val_loss: 1.1064 - val_accuracy: 0.7169\n",
+      "Epoch 10/13\n",
+      "1336/1336 [==============================] - 195s 146ms/step - loss: 0.3012 - accuracy: 0.8988 - val_loss: 0.9584 - val_accuracy: 0.7158\n",
+      "Epoch 11/13\n",
+      "1336/1336 [==============================] - 195s 146ms/step - loss: 0.2631 - accuracy: 0.9127 - val_loss: 0.9759 - val_accuracy: 0.7224\n",
+      "Epoch 12/13\n",
+      "1336/1336 [==============================] - 195s 146ms/step - loss: 0.2225 - accuracy: 0.9270 - val_loss: 1.0673 - val_accuracy: 0.7156\n",
+      "Epoch 13/13\n",
+      "1336/1336 [==============================] - 195s 146ms/step - loss: 0.2171 - accuracy: 0.9287 - val_loss: 1.1341 - val_accuracy: 0.7138\n",
+      "Predicting model 3\n",
+      "1407/1407 - 56s - 56s/epoch - 40ms/step\n",
+      "Accuracy: 0.7175555555555555 for model 3\n",
+      "Saving model 3\n",
+      "Found 90000 files belonging to 10 classes.\n",
+      "Using 85500 files for training.\n",
+      "Found 90000 files belonging to 10 classes.\n",
+      "Using 4500 files for validation.\n",
+      "Found 90000 files belonging to 10 classes.\n",
+      "Fitting model 4\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a44f62d76c35401aba0824db0c7ea39a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Epoch:   0%|          | 0/13 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/13\n",
+      "1336/1336 [==============================] - 231s 151ms/step - loss: 1.3002 - accuracy: 0.5304 - val_loss: 1.0034 - val_accuracy: 0.6513\n",
+      "Epoch 2/13\n",
+      "1336/1336 [==============================] - 197s 147ms/step - loss: 1.1444 - accuracy: 0.5989 - val_loss: 1.0532 - val_accuracy: 0.6218\n",
+      "Epoch 3/13\n",
+      "1336/1336 [==============================] - 197s 147ms/step - loss: 1.0172 - accuracy: 0.6458 - val_loss: 1.0060 - val_accuracy: 0.6484\n",
+      "Epoch 4/13\n",
+      "1336/1336 [==============================] - 196s 147ms/step - loss: 0.9004 - accuracy: 0.6863 - val_loss: 0.9175 - val_accuracy: 0.6796\n",
+      "Epoch 5/13\n",
+      "1336/1336 [==============================] - 196s 147ms/step - loss: 0.9324 - accuracy: 0.6748 - val_loss: 0.9431 - val_accuracy: 0.6878\n",
+      "Epoch 6/13\n",
+      "1336/1336 [==============================] - 196s 147ms/step - loss: 0.7625 - accuracy: 0.7368 - val_loss: 0.8817 - val_accuracy: 0.7100\n",
+      "Epoch 7/13\n",
+      "1336/1336 [==============================] - 197s 147ms/step - loss: 0.6780 - accuracy: 0.7668 - val_loss: 1.0126 - val_accuracy: 0.7084\n",
+      "Epoch 8/13\n",
+      "1336/1336 [==============================] - 196s 147ms/step - loss: 0.5924 - accuracy: 0.7958 - val_loss: 0.9181 - val_accuracy: 0.7127\n",
+      "Epoch 9/13\n",
+      "1336/1336 [==============================] - 197s 148ms/step - loss: 0.5365 - accuracy: 0.8163 - val_loss: 0.9020 - val_accuracy: 0.7213\n",
+      "Epoch 10/13\n",
+      "1336/1336 [==============================] - 196s 147ms/step - loss: 0.3961 - accuracy: 0.8663 - val_loss: 1.0098 - val_accuracy: 0.7104\n",
+      "Epoch 11/13\n",
+      "1336/1336 [==============================] - 196s 147ms/step - loss: 0.3251 - accuracy: 0.8923 - val_loss: 0.9971 - val_accuracy: 0.7111\n",
+      "Epoch 12/13\n",
+      "1336/1336 [==============================] - 196s 147ms/step - loss: 0.2761 - accuracy: 0.9085 - val_loss: 1.0850 - val_accuracy: 0.7189\n",
+      "Epoch 13/13\n",
+      "1336/1336 [==============================] - 196s 147ms/step - loss: 0.2251 - accuracy: 0.9269 - val_loss: 1.1344 - val_accuracy: 0.7218\n",
+      "Predicting model 4\n",
+      "1407/1407 - 61s - 61s/epoch - 43ms/step\n",
+      "Accuracy: 0.7234555555555555 for model 4\n",
+      "Saving model 4\n"
      ]
     }
    ],
