--- a/efficientLarge_keras_aug_13epochs.ipynb
+++ b/efficientLarge_keras_aug_13epochs.ipynb
@@ -61,24 +61,24 @@
     "p_dict = {\n",
     "    # \"flip\": 0.5,\n",
     "    # \"transpose\": 0.5,\n",
-    "    # \"gauss_noise\": 0.5,\n",
+    "    \"gauss_noise\": 0.5,\n",
     "    # \"brightness_contrast\": 0.5,\n",
     "    # \"hue_saturation_value\": 0.5,\n",
     "}\n",
     "\n",
     "p_dicts = []\n",
-    "for aug_type in p_dict.keys():\n",
-    "    p_d = {aug_type: 0.5}\n",
-    "    p_dicts.append(p_d)\n",
+    "# for aug_type in p_dict.keys():\n",
+    "#     p_d = {aug_type: .5}\n",
+    "#     p_dicts.append(p_d)\n",
     "\n",
-    "p_dict = {\n",
-    "    \"flip\": 0.5,\n",
-    "    # \"transpose\": 0.5,\n",
-    "    \"gauss_noise\": 0.5,\n",
-    "    # \"brightness_contrast\": 0.5,\n",
-    "    # \"hue_saturation_value\": 0.5,\n",
-    "}\n",
-    "p_dicts.append(p_dict)\n",
+    "# p_dict = {\n",
+    "#   \"flip\": 0.5,\n",
+    "#   # \"transpose\": 0.5,\n",
+    "#   \"gauss_noise\": 0.5,\n",
+    "#   # \"brightness_contrast\": 0.5,\n",
+    "#   # \"hue_saturation_value\": 0.5,\n",
+    "# }\n",
+    "# p_dicts.append(p_dict)\n",
     "\n",
     "p_dicts"
    ]
@@ -89,7 +89,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "EPOCHS = 50\n",
+    "EPOCHS = 13\n",
     "\n",
     "histories = list()\n",
     "accuracies = list()\n",
@@ -140,14 +140,25 @@
     "            shuffle=False,\n",
     "        )\n",
     "\n",
-    "        dnn_model = create_cnn(\n",
-    "            kernel_sizes=[\n",
-    "                3,\n",
-    "                3,\n",
-    "                3,\n",
-    "            ],\n",
-    "            num_filters=[32, 64, 64],\n",
-    "            fc_sizes=[128, 64, 64],\n",
+    "        dnn_model = Sequential()\n",
+    "        imported_model = tf.keras.applications.EfficientNetV2L(\n",
+    "            include_top=False,\n",
+    "            input_shape=(height, width, 3),\n",
+    "            pooling=\"max\",\n",
+    "            classes=10,\n",
+    "            weights=\"imagenet\",\n",
+    "        )\n",
+    "\n",
+    "        dnn_model.add(imported_model)\n",
+    "        dnn_model.add(Flatten())\n",
+    "        dnn_model.add(Dense(2048, activation=\"relu\"))\n",
+    "        dnn_model.add(Dense(1024, activation=\"relu\"))\n",
+    "        dnn_model.add(Dense(10, activation=\"softmax\"))\n",
+    "\n",
+    "        dnn_model.compile(\n",
+    "            optimizer=Adam(learning_rate=0.001),\n",
+    "            loss=\"sparse_categorical_crossentropy\",\n",
+    "            metrics=[\"accuracy\"],\n",
     "        )\n",
     "\n",
     "        history = {\n",
@@ -185,22 +196,24 @@
     "        class_accuracy = conf_mat.diagonal() / conf_mat.sum(axis=1)\n",
     "\n",
     "        print(f\"Saving model {iteration}\")\n",
-    "        dnn_model.save(f\"../models/BESTClassicCNN_aug_{aug_str}_{iteration}.h5\")\n",
+    "        dnn_model.save(f\"../models/EfficientNet_13epochs_aug_{aug_str}_{iteration}.h5\")\n",
     "        histories.append(deepcopy(history))\n",
     "        accuracies.append(deepcopy(accuracy))\n",
     "        class_accuracies.append(deepcopy(class_accuracy))\n",
     "        conf_mats.append(deepcopy(conf_mat))\n",
     "\n",
-    "    with open(f\"results/HISTORY_BESTClassicCNN_aug_{aug_str}.pkl\", \"wb\") as f:\n",
+    "    with open(f\"results/HISTORY_EfficientNet_13epochs_aug_{aug_str}.pkl\", \"wb\") as f:\n",
     "        pickle.dump(histories, f)\n",
     "\n",
-    "    with open(f\"results/ACCURACY_BESTClassicCNN_aug_{aug_str}.pkl\", \"wb\") as f:\n",
+    "    with open(f\"results/ACCURACY_EfficientNet_13epochs_aug_{aug_str}.pkl\", \"wb\") as f:\n",
     "        pickle.dump(accuracies, f)\n",
     "\n",
-    "    with open(f\"results/CLASS_ACCURACY_BESTClassicCNN_aug_{aug_str}.pkl\", \"wb\") as f:\n",
+    "    with open(\n",
+    "        f\"results/CLASS_ACCURACY_EfficientNet_13epochs_aug_{aug_str}.pkl\", \"wb\"\n",
+    "    ) as f:\n",
     "        pickle.dump(class_accuracies, f)\n",
     "\n",
-    "    with open(f\"results/CONF_MAT_BESTClassicCNN_aug_{aug_str}.pkl\", \"wb\") as f:\n",
+    "    with open(f\"results/CONF_MAT_EfficientNet_13epochs_aug_{aug_str}.pkl\", \"wb\") as f:\n",
     "        pickle.dump(conf_mats, f)"
    ]
   }
