--- a/resnet_keras_no_aug.ipynb
+++ b/resnet_keras_no_aug.ipynb
@@ -2,87 +2,60 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "from tensorflow import keras\n",
     "from tensorflow.keras import layers\n",
-    "\n",
-    "from src.augmentations import CustomAugmentations\n",
-    "\n",
-    "from copy import deepcopy\n",
-    "import numpy as np\n",
-    "from sklearn.metrics import confusion_matrix, accuracy_score\n",
-    "from tqdm.notebook import tqdm\n",
     "from tensorflow.keras.optimizers import Adam\n",
     "from tensorflow.keras.models import Sequential\n",
-    "from tensorflow.keras.layers import Dense, Flatten\n",
+    "from tensorflow.keras.layers import (\n",
+    "    Dense,\n",
+    "    Flatten,\n",
+    "    MaxPooling2D,\n",
+    "    Conv2D,\n",
+    "    Dropout,\n",
+    "    BatchNormalization,\n",
+    ")\n",
     "\n",
+    "from src.kerasCNN import *\n",
+    "from src.augmentations import CustomAugmentations\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "from copy import deepcopy\n",
+    "import pickle\n",
+    "\n",
+    "from sklearn.metrics import confusion_matrix, accuracy_score\n",
+    "from tqdm.notebook import tqdm\n",
+    "\n",
+    "import numpy as np\n",
     "import random\n",
+    "import os\n",
     "\n",
     "np.random.seed(42)\n",
     "tf.random.set_seed(42)\n",
     "random.seed(42)\n",
-    "\n",
-    "import os\n",
-    "os.environ['PYTHONHASHSEED'] = '42'\n",
-    "\n",
-    "keras.utils.set_random_seed(42)\n",
-    "# tf.config.experimental.enable_op_determinism()"
+    "os.environ[\"PYTHONHASHSEED\"] = \"42\"\n",
+    "keras.utils.set_random_seed(42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "height,width=32,32\n",
-    "batch_size=64"
+    "height, width = 32, 32\n",
+    "batch_size = 64"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b7b6183c7898489bbc96a175afb2ea05",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/5 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Found 90000 files belonging to 10 classes.\n",
-      "Using 85500 files for training.\n",
-      "Found 90000 files belonging to 10 classes.\n",
-      "Using 4500 files for validation.\n",
-      "Found 90000 files belonging to 10 classes.\n",
-      "Fitting model 0\n",
-      "Epoch 1/40\n",
-      "1336/1336 [==============================] - 47s 31ms/step - loss: 1.5764 - accuracy: 0.4420 - val_loss: 1.8601 - val_accuracy: 0.3651\n",
-      "Epoch 2/40\n",
-      "1336/1336 [==============================] - 45s 33ms/step - loss: 1.2577 - accuracy: 0.5607 - val_loss: 1.4094 - val_accuracy: 0.5233\n",
-      "Epoch 3/40\n",
-      "1336/1336 [==============================] - 46s 34ms/step - loss: 1.1077 - accuracy: 0.6111 - val_loss: 1.4178 - val_accuracy: 0.5238\n",
-      "Epoch 4/40\n",
-      "   5/1336 [..............................] - ETA: 46s - loss: 1.1254 - accuracy: 0.5969"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "histories = list()\n",
     "accuracies = list()\n",
@@ -91,64 +64,69 @@
     "\n",
     "for i in tqdm(range(5)):\n",
     "    train_set = tf.keras.preprocessing.image_dataset_from_directory(\n",
-    "    '../data/CINIC10/train',\n",
-    "    labels='inferred',\n",
-    "    label_mode='int',\n",
-    "    class_names=None,\n",
-    "    color_mode='rgb',\n",
-    "    batch_size=64,\n",
-    "    image_size=(height, width),\n",
-    "    shuffle=True,\n",
-    "    seed=i,\n",
-    "    validation_split=0.05,\n",
-    "    subset='training'\n",
-    "    )\n",
-    "\n",
-    "    val_set = tf.keras.preprocessing.image_dataset_from_directory(\n",
-    "        '../data/CINIC10/valid',\n",
-    "        labels='inferred',\n",
-    "        label_mode='int',\n",
+    "        \"../data/CINIC10/train\",\n",
+    "        labels=\"inferred\",\n",
+    "        label_mode=\"int\",\n",
     "        class_names=None,\n",
-    "        color_mode='rgb',\n",
+    "        color_mode=\"rgb\",\n",
     "        batch_size=64,\n",
     "        image_size=(height, width),\n",
     "        shuffle=True,\n",
     "        seed=i,\n",
     "        validation_split=0.05,\n",
-    "        subset='validation'\n",
+    "        subset=\"training\",\n",
+    "    )\n",
+    "\n",
+    "    val_set = tf.keras.preprocessing.image_dataset_from_directory(\n",
+    "        \"../data/CINIC10/valid\",\n",
+    "        labels=\"inferred\",\n",
+    "        label_mode=\"int\",\n",
+    "        class_names=None,\n",
+    "        color_mode=\"rgb\",\n",
+    "        batch_size=64,\n",
+    "        image_size=(height, width),\n",
+    "        shuffle=True,\n",
+    "        seed=i,\n",
+    "        validation_split=0.05,\n",
+    "        subset=\"validation\",\n",
     "    )\n",
     "\n",
     "    test_set = tf.keras.preprocessing.image_dataset_from_directory(\n",
-    "        '../data/CINIC10/test',\n",
-    "        labels='inferred',\n",
-    "        label_mode='int',\n",
+    "        \"../data/CINIC10/test\",\n",
+    "        labels=\"inferred\",\n",
+    "        label_mode=\"int\",\n",
     "        class_names=None,\n",
-    "        color_mode='rgb',\n",
+    "        color_mode=\"rgb\",\n",
     "        batch_size=64,\n",
     "        image_size=(height, width),\n",
     "        shuffle=False,\n",
     "    )\n",
     "\n",
-    "\n",
     "    dnn_model = Sequential()\n",
-    "    imported_model= tf.keras.applications.ResNet50 (include_top=False,\n",
-    "    input_shape=(height,width,3),\n",
-    "    pooling='max',classes=10,\n",
-    "    weights='imagenet')\n",
+    "    imported_model = tf.keras.applications.ResNet50(\n",
+    "        include_top=False,\n",
+    "        input_shape=(height, width, 3),\n",
+    "        pooling=\"max\",\n",
+    "        classes=10,\n",
+    "        weights=\"imagenet\",\n",
+    "    )\n",
     "\n",
     "    dnn_model.add(imported_model)\n",
     "    dnn_model.add(Flatten())\n",
-    "    dnn_model.add(Dense(2048, activation='relu'))\n",
-    "    dnn_model.add(Dense(1024, activation='relu'))\n",
-    "    dnn_model.add(Dense(10, activation='softmax'))\n",
+    "    dnn_model.add(Dense(2048, activation=\"relu\"))\n",
+    "    dnn_model.add(Dense(1024, activation=\"relu\"))\n",
+    "    dnn_model.add(Dense(10, activation=\"softmax\"))\n",
     "\n",
-    "    dnn_model.compile(optimizer=Adam(learning_rate=0.001),loss='sparse_categorical_crossentropy',metrics=['accuracy'])\n",
+    "    dnn_model.compile(\n",
+    "        optimizer=Adam(learning_rate=0.001),\n",
+    "        loss=\"sparse_categorical_crossentropy\",\n",
+    "        metrics=[\"accuracy\"],\n",
+    "    )\n",
     "\n",
-    "\n",
-    "    print(f'Fitting model {i}')\n",
+    "    print(f\"Fitting model {i}\")\n",
     "    history = dnn_model.fit(train_set, validation_data=val_set, epochs=40)\n",
     "\n",
-    "    print(f'Predicting model {i}')\n",
+    "    print(f\"Predicting model {i}\")\n",
     "    preds = dnn_model.predict(test_set, verbose=2)\n",
     "    preds = preds.argmax(axis=1)\n",
     "    classes = test_set.class_names\n",
@@ -160,34 +138,33 @@
     "\n",
     "    conf_mat = confusion_matrix(test_labels, preds)\n",
     "    accuracy = accuracy_score(test_labels, preds)\n",
-    "    class_accuracy = conf_mat.diagonal()/conf_mat.sum(axis=1)\n",
+    "    class_accuracy = conf_mat.diagonal() / conf_mat.sum(axis=1)\n",
     "\n",
-    "    print(f'Saving model {i}')\n",
-    "    dnn_model.save(f'../models/resnet50_no_aug_{i}.h5')\n",
+    "    print(f\"Saving model {i}\")\n",
+    "    dnn_model.save(f\"../models/resnet50_no_aug_{i}.h5\")\n",
     "    histories.append(deepcopy(history.history))\n",
     "    accuracies.append(accuracy)\n",
     "    class_accuracies.append(class_accuracy)\n",
     "    conf_mats.append(conf_mat)\n",
     "\n",
-    "    \n",
+    "\n",
     "# save histories\n",
     "import pickle\n",
-    "with open('results/HISTORY_resnet50_no_aug.pkl', 'wb') as f:\n",
+    "\n",
+    "with open(\"results/HISTORY_resnet50_no_aug.pkl\", \"wb\") as f:\n",
     "    pickle.dump(histories, f)\n",
     "\n",
     "# save accuracies\n",
-    "with open('results/ACCURACY_resnet50_no_aug.pkl', 'wb') as f:\n",
+    "with open(\"results/ACCURACY_resnet50_no_aug.pkl\", \"wb\") as f:\n",
     "    pickle.dump(accuracies, f)\n",
     "\n",
     "# save class accuracies\n",
-    "with open('results/CLASS_ACCURACY_resnet50_no_aug.pkl', 'wb') as f:\n",
+    "with open(\"results/CLASS_ACCURACY_resnet50_no_aug.pkl\", \"wb\") as f:\n",
     "    pickle.dump(class_accuracies, f)\n",
     "\n",
     "# save confusion matrices\n",
-    "with open('results/CONF_MAT_resnet50_no_aug.pkl', 'wb') as f:\n",
-    "    pickle.dump(conf_mats, f)\n",
-    "\n",
-    "\n"
+    "with open(\"results/CONF_MAT_resnet50_no_aug.pkl\", \"wb\") as f:\n",
+    "    pickle.dump(conf_mats, f)"
    ]
   }
  ],
