--- a/efficientLarge_keras_no_aug.ipynb
+++ b/efficientLarge_keras_no_aug.ipynb
@@ -33,6 +33,7 @@
     "import numpy as np\n",
     "import random\n",
     "import os\n",
+    "os.mkdir(\"../models\")\n",
     "\n",
     "np.random.seed(42)\n",
     "tf.random.set_seed(42)\n",
