--- a/resnet_keras_no_aug.ipynb
+++ b/resnet_keras_no_aug.ipynb
@@ -21,7 +21,7 @@
     ")\n",
     "\n",
     "from src.kerasCNN import *\n",
-    "from src.augmentations import CustomAugmentations\n",
+    "from src.augmentations.CustomAugmentations import CustomAugmentationsTF\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "from copy import deepcopy\n",
@@ -33,6 +33,7 @@
     "import numpy as np\n",
     "import random\n",
     "import os\n",
+    "os.mkdir(\"../models\")\n",
     "\n",
     "np.random.seed(42)\n",
     "tf.random.set_seed(42)\n",
