--- a/summaries/EfficientNet.ipynb
+++ b/summaries/EfficientNet.ipynb
@@ -87,34 +87,34 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>flip0.5</td>\n",
-       "      <td>0.748</td>\n",
-       "      <td>0.013</td>\n",
-       "      <td>0.729</td>\n",
-       "      <td>0.771</td>\n",
+       "      <td>0.74842</td>\n",
+       "      <td>0.01338</td>\n",
+       "      <td>0.72928</td>\n",
+       "      <td>0.77066</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>flip0.5_gauss_noise0.5</td>\n",
-       "      <td>0.737</td>\n",
-       "      <td>0.019</td>\n",
-       "      <td>0.701</td>\n",
-       "      <td>0.756</td>\n",
+       "      <td>0.73663</td>\n",
+       "      <td>0.01877</td>\n",
+       "      <td>0.70070</td>\n",
+       "      <td>0.75573</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>gauss_noise0.5</td>\n",
-       "      <td>0.723</td>\n",
-       "      <td>0.003</td>\n",
-       "      <td>0.718</td>\n",
-       "      <td>0.727</td>\n",
+       "      <td>0.72278</td>\n",
+       "      <td>0.00301</td>\n",
+       "      <td>0.71756</td>\n",
+       "      <td>0.72694</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>None</td>\n",
-       "      <td>0.715</td>\n",
-       "      <td>0.009</td>\n",
-       "      <td>0.703</td>\n",
-       "      <td>0.730</td>\n",
+       "      <td>0.71549</td>\n",
+       "      <td>0.00947</td>\n",
+       "      <td>0.70329</td>\n",
+       "      <td>0.72950</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -122,10 +122,10 @@
       ],
       "text/plain": [
        "             augmentation  average_acc  std_acc  min_acc  max_acc\n",
-       "1                 flip0.5        0.748    0.013    0.729    0.771\n",
-       "3  flip0.5_gauss_noise0.5        0.737    0.019    0.701    0.756\n",
-       "2          gauss_noise0.5        0.723    0.003    0.718    0.727\n",
-       "0                    None        0.715    0.009    0.703    0.730"
+       "1                 flip0.5      0.74842  0.01338  0.72928  0.77066\n",
+       "3  flip0.5_gauss_noise0.5      0.73663  0.01877  0.70070  0.75573\n",
+       "2          gauss_noise0.5      0.72278  0.00301  0.71756  0.72694\n",
+       "0                    None      0.71549  0.00947  0.70329  0.72950"
       ]
      },
      "execution_count": 3,
@@ -156,7 +156,7 @@
     "df['augmentation'] = df['augmentation'].str[13:]\n",
     "df['augmentation'] = df['augmentation'].str.replace('no_aug', 'None')\n",
     "df['augmentation'] = df['augmentation'].str.replace('13epochs_aug_', '')\n",
-    "df.round(3)"
+    "df.round(5)"
    ]
   },
   {
@@ -200,18 +200,17 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'EfficientNet_13epochs_aug_flip0.5'"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EfficientNet_13epochs_aug_flip0.5\n",
+      "4\n"
+     ]
     }
    ],
    "source": [
-    "best_name"
+    "print(best_name)\n",
+    "print(np.argmax(get_model_info(best_name)['acc']))"
    ]
   },
   {
