--- a/summaries/bestCNN_augmentations.ipynb
+++ b/summaries/bestCNN_augmentations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
        " 'BESTClassicCNN_aug_flip0.5_gauss_noise0.5']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -88,50 +88,50 @@
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>flip0.5_gauss_noise0.5</td>\n",
-       "      <td>0.645</td>\n",
-       "      <td>0.005</td>\n",
-       "      <td>0.637</td>\n",
-       "      <td>0.652</td>\n",
+       "      <td>0.64550</td>\n",
+       "      <td>0.00486</td>\n",
+       "      <td>0.63676</td>\n",
+       "      <td>0.65168</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>flip0.5</td>\n",
-       "      <td>0.643</td>\n",
-       "      <td>0.011</td>\n",
-       "      <td>0.629</td>\n",
-       "      <td>0.660</td>\n",
+       "      <td>0.64254</td>\n",
+       "      <td>0.01107</td>\n",
+       "      <td>0.62903</td>\n",
+       "      <td>0.66031</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>gauss_noise0.5</td>\n",
-       "      <td>0.588</td>\n",
-       "      <td>0.003</td>\n",
-       "      <td>0.584</td>\n",
-       "      <td>0.593</td>\n",
+       "      <td>0.58783</td>\n",
+       "      <td>0.00272</td>\n",
+       "      <td>0.58444</td>\n",
+       "      <td>0.59277</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>hue_saturation_value0.5</td>\n",
-       "      <td>0.551</td>\n",
-       "      <td>0.049</td>\n",
-       "      <td>0.468</td>\n",
-       "      <td>0.599</td>\n",
+       "      <td>0.55133</td>\n",
+       "      <td>0.04925</td>\n",
+       "      <td>0.46763</td>\n",
+       "      <td>0.59862</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>brightness_contrast0.5</td>\n",
-       "      <td>0.538</td>\n",
-       "      <td>0.059</td>\n",
-       "      <td>0.456</td>\n",
-       "      <td>0.590</td>\n",
+       "      <td>0.53805</td>\n",
+       "      <td>0.05891</td>\n",
+       "      <td>0.45599</td>\n",
+       "      <td>0.58961</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>transpose0.5</td>\n",
-       "      <td>0.532</td>\n",
-       "      <td>0.096</td>\n",
-       "      <td>0.403</td>\n",
-       "      <td>0.614</td>\n",
+       "      <td>0.53208</td>\n",
+       "      <td>0.09584</td>\n",
+       "      <td>0.40293</td>\n",
+       "      <td>0.61428</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -139,15 +139,15 @@
       ],
       "text/plain": [
        "              augmentation  average_acc  std_acc  min_acc  max_acc\n",
-       "5   flip0.5_gauss_noise0.5        0.645    0.005    0.637    0.652\n",
-       "1                  flip0.5        0.643    0.011    0.629    0.660\n",
-       "2           gauss_noise0.5        0.588    0.003    0.584    0.593\n",
-       "3  hue_saturation_value0.5        0.551    0.049    0.468    0.599\n",
-       "0   brightness_contrast0.5        0.538    0.059    0.456    0.590\n",
-       "4             transpose0.5        0.532    0.096    0.403    0.614"
+       "5   flip0.5_gauss_noise0.5      0.64550  0.00486  0.63676  0.65168\n",
+       "1                  flip0.5      0.64254  0.01107  0.62903  0.66031\n",
+       "2           gauss_noise0.5      0.58783  0.00272  0.58444  0.59277\n",
+       "3  hue_saturation_value0.5      0.55133  0.04925  0.46763  0.59862\n",
+       "0   brightness_contrast0.5      0.53805  0.05891  0.45599  0.58961\n",
+       "4             transpose0.5      0.53208  0.09584  0.40293  0.61428"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,12 +174,12 @@
     "df.reset_index(drop=True, inplace=True)\n",
     "df.sort_values(by='average_acc', ascending=False, inplace=True)\n",
     "df['augmentation'] = df['augmentation'].str[19:]\n",
-    "df.round(3)"
+    "df.round(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
        " 9: 'truck'}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,27 +214,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'BESTClassicCNN_aug_flip0.5_gauss_noise0.5'"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BESTClassicCNN_aug_flip0.5_gauss_noise0.5\n",
+      "2\n"
+     ]
     }
    ],
    "source": [
-    "best_name"
+    "print(best_name)\n",
+    "print(np.argmax(get_model_info(best_name)['acc']))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
