--- a/resnet_keras_aug.ipynb
+++ b/resnet_keras_aug.ipynb
@@ -33,7 +33,10 @@
     "import numpy as np\n",
     "import random\n",
     "import os\n",
-    "os.mkdir(\"../models\")\n",
+    "try:\n",
+    "    os.mkdir(\"../models\")\n",
+    "except:\n",
+    "    pass\n",
     "\n",
     "np.random.seed(42)\n",
     "tf.random.set_seed(42)\n",
