--- a/summaries/resNet50.ipynb
+++ b/summaries/resNet50.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
        " 'ResNet50_aug_flip0.5_gauss_noise0.5']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -84,34 +84,34 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>aug_flip0.5</td>\n",
-       "      <td>0.667</td>\n",
-       "      <td>0.005</td>\n",
-       "      <td>0.658</td>\n",
-       "      <td>0.671</td>\n",
+       "      <td>0.66716</td>\n",
+       "      <td>0.00486</td>\n",
+       "      <td>0.65796</td>\n",
+       "      <td>0.67122</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>aug_flip0.5_gauss_noise0.5</td>\n",
-       "      <td>0.657</td>\n",
-       "      <td>0.012</td>\n",
-       "      <td>0.635</td>\n",
-       "      <td>0.669</td>\n",
+       "      <td>0.65707</td>\n",
+       "      <td>0.01228</td>\n",
+       "      <td>0.63537</td>\n",
+       "      <td>0.66890</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>aug_gauss_noise0.5</td>\n",
-       "      <td>0.651</td>\n",
-       "      <td>0.018</td>\n",
-       "      <td>0.622</td>\n",
-       "      <td>0.671</td>\n",
+       "      <td>0.65095</td>\n",
+       "      <td>0.01781</td>\n",
+       "      <td>0.62231</td>\n",
+       "      <td>0.67122</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>None</td>\n",
-       "      <td>0.636</td>\n",
-       "      <td>0.010</td>\n",
-       "      <td>0.621</td>\n",
-       "      <td>0.645</td>\n",
+       "      <td>0.63554</td>\n",
+       "      <td>0.00967</td>\n",
+       "      <td>0.62133</td>\n",
+       "      <td>0.64520</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -119,13 +119,13 @@
       ],
       "text/plain": [
        "                 augmentation  average_acc  std_acc  min_acc  max_acc\n",
-       "1                 aug_flip0.5        0.667    0.005    0.658    0.671\n",
-       "3  aug_flip0.5_gauss_noise0.5        0.657    0.012    0.635    0.669\n",
-       "2          aug_gauss_noise0.5        0.651    0.018    0.622    0.671\n",
-       "0                        None        0.636    0.010    0.621    0.645"
+       "1                 aug_flip0.5      0.66716  0.00486  0.65796  0.67122\n",
+       "3  aug_flip0.5_gauss_noise0.5      0.65707  0.01228  0.63537  0.66890\n",
+       "2          aug_gauss_noise0.5      0.65095  0.01781  0.62231  0.67122\n",
+       "0                        None      0.63554  0.00967  0.62133  0.64520"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,12 +151,12 @@
     "df.sort_values(by='average_acc', ascending=False, inplace=True)\n",
     "df['augmentation'] = df['augmentation'].str[9:]\n",
     "df['augmentation'] = df['augmentation'].str.replace('no_aug', 'None')\n",
-    "df.round(3)"
+    "df.round(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
        " 9: 'truck'}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,27 +191,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'ResNet50_aug_flip0.5'"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ResNet50_aug_flip0.5\n",
+      "3\n"
+     ]
     }
    ],
    "source": [
-    "best_name"
+    "print(best_name)\n",
+    "print(np.argmax(get_model_info(best_name)['acc']))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
