add requirements and empty readme

--- a/ensemble_predictor.ipynb
+++ b/ensemble_predictor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -132,23 +132,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.3112784 , 0.36810982, 0.32061178])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_weights = [models['BESTClassicCNN']['acc'], models['BESTEfficientNet']['acc'], models['BESTResNet']['acc']]\n",
+    "model_weights = np.array(model_weights) / np.sum(model_weights)\n",
+    "model_weights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1407/1407 [==============================] - 11s 7ms/step\n",
-      "1407/1407 [==============================] - 45s 32ms/step\n",
-      "1407/1407 [==============================] - 13s 9ms/step\n"
+      "1407/1407 [==============================] - 15s 9ms/step\n",
+      "1407/1407 [==============================] - 47s 31ms/step\n",
+      "1407/1407 [==============================] - 15s 11ms/step\n"
      ]
     }
    ],
    "source": [
-    "# make an ensemble of models\n",
-    "models = [classicCNN, efficientNet, resNet]\n",
-    "\n",
     "# make predictions\n",
     "preds_models = {\n",
     "    'classicCNN': [],\n",
@@ -164,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -173,16 +192,12 @@
        "array([0, 0, 0, ..., 9, 9, 9], dtype=int64)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model_weights = [models['BESTClassicCNN']['acc'], models['BESTEfficientNet']['acc'], models['BESTResNet']['acc']]\n",
-    "model_weights = np.array(model_weights) / np.sum(model_weights)\n",
-    "model_weights\n",
-    "\n",
     "# make the ensemble prediction\n",
     "ensemble_preds = np.zeros((90000, 10))\n",
     "for i, model in enumerate(models):\n",
@@ -194,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +233,7 @@
        "array([0, 0, 0, ..., 9, 9, 9])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +253,7 @@
        "0.7653777777777778"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +285,7 @@
        "      dtype=int64)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +318,7 @@
        " 9: 'truck'}"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -359,13 +374,88 @@
        "       0.58033333, 0.87644444, 0.81866667, 0.83822222, 0.79333333])"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "class_accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.76811111, 0.69233333, 0.52577778, 0.59655556, 0.62855556,\n",
+       "       0.45122222, 0.71288889, 0.70644444, 0.73166667, 0.70322222])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# classic CNN class accuracy\n",
+    "# read data from pickle\n",
+    "with open('results/CLASS_ACCURACY_BESTClassicCNN_aug_flip0.5_gauss_noise0.5.pkl', 'rb') as f:\n",
+    "    resnet_class_accuracy = pickle.load(f)\n",
+    "resnet_class_accuracy[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.785     , 0.64877778, 0.627     , 0.58744444, 0.64144444,\n",
+       "       0.49      , 0.82266667, 0.71011111, 0.67666667, 0.72311111])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# resNet class accuracy\n",
+    "# read data from pickle\n",
+    "with open('results/CLASS_ACCURACY_ResNet50_aug_flip0.5.pkl', 'rb') as f:\n",
+    "    resnet_class_accuracy = pickle.load(f)\n",
+    "resnet_class_accuracy[3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.84077778, 0.78644444, 0.72988889, 0.62822222, 0.73977778,\n",
+       "       0.59833333, 0.89033333, 0.83922222, 0.87411111, 0.77944444])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# EfficientNet class accuracy\n",
+    "# read data from pickle\n",
+    "with open('results/CLASS_ACCURACY_EfficientNet_13epochs_aug_flip0.5.pkl', 'rb') as f:\n",
+    "    resnet_class_accuracy = pickle.load(f)\n",
+    "resnet_class_accuracy[4]"
    ]
   }
  ],
